--- a/index.html
+++ b/index.html
@@ -12,29 +12,35 @@
 <body>
     <main class="container">
         <h1>Meet Our Team</h1>
-        <p>Lorem ipsum, dolor  sit amet consectetur adipisicing elit. Dolores saepe facilis quibusdam! Impedit odit dignissimos delectus, in veniam perferendis. Velit doloremque voluptas quo sequi consequatur, distinctio ad error nulla optio.</p>
+        <p class="first-p">Lorem ipsum, dolor  sit amet consectetur adipisicing elit. Dolores saepe facilis quibusdam! Impedit odit dignissimos delectus, in veniam perferendis. Velit doloremque voluptas quo sequi consequatur, distinctio ad error nulla optio.</p>
 
         <section class="clearfix">
 			<div class="column-space">
 				<div class="first-card">
             		<div class="col">
 						<img class="columnImg" src="./img/male1.png" alt="">
-						<h3>MARCO BIANCHI</h3>
-						<P>Designer</P>
-						<p>marcobianchi@team.com</p>
+						<div class="text">
+							<h3>MARCO BIANCHI</h3>
+							<P>Designer</P>
+							<p class="change-color">marcobianchi@team.com</p>
+						</div>
 					</div>
 				</div>
             	<div class="col">
 					<img class="columnImg" src="./img/female1.png" alt=""> 
-					<h3>LAURA ROSSI</h3>
-					<p>Front-end Developer</p>
-					<p>laurarossi@team.com</p>
+					<div class="text">
+						<h3>LAURA ROSSI</h3>
+						<p>Front-end Developer</p>
+						<p class="change-color">laurarossi@team.com</p>
+					</div>
 				</div>
 				<div class="col">
 					<img class="columnImg" src="./img/male2.png" alt="">
-					<h3>GIORGIO VERDI</h3>
-					<p>Back-end Developer</p>
-					<p>giorgioverdi@team.com</p>
+					<div class="text">
+						<h3>GIORGIO VERDI</h3>
+						<p>Back-end Developer</p>
+						<p class="change-color">giorgioverdi@team.com</p>
+					</div>
 				</div>
 			</div>
         </section>
@@ -44,22 +50,28 @@
 				<div class="first-card">
             		<div class="col">
 						<img class="columnImg" src="./img/female2.png" alt="">
-						<h3>MARTA IPSUM</h3>
-						<P>SEO Specialist</P>
-						<p>martaipsum@team.com</p>
+						<div class="text">
+							<h3>MARTA IPSUM</h3>
+							<P>SEO Specialist</P>
+							<p class="change-color">martaipsum@team.com</p>
+						</div>
 					</div>
 				</div>
             	<div class="col">
-					<img class="columnImg" src="./img/male3.png" alt=""> 
-					<h3>ROBERTO LOREM</h3>
-					<p>Project Manager</p>
-					<p>robertolorem@team.com</p>
+					<img class="columnImg" src="./img/male3.png" alt="">
+					<div class="text"> 
+						<h3>ROBERTO LOREM</h3>
+						<p>Project Manager</p>
+						<p class="change-color">robertolorem@team.com</p>
+					</div>
 				</div>
 				<div class="col">
 					<img class="columnImg" src="./img/female3.png" alt="">
-					<h3>DANIELA AMET</h3>
-					<p>Analyst</p>
-					<p>danielaamet@team.com</p>
+					<div class="text">
+						<h3>DANIELA AMET</h3>
+						<p>Analyst</p>
+						<p class="change-color">danielaamet@team.com</p>
+					</div>
 				</div>
 			</div>
         </section>
